@@ -3,10 +3,10 @@ title: Procédure de mise à niveau pour les installations de serveur d’applic
 description: Découvrez comment mettre à niveau des instances AEM qui sont déployées par le biais de serveurs d’applications.
 feature: Upgrading
 exl-id: 86dd10ae-7f16-40c8-84b6-91ff2973a523
-source-git-commit: 5e875e0420540ca209e7d677046e8d010ae4e145
+source-git-commit: c0574b50f3504a4792405d6fcd8aa3a2e8e6c686
 workflow-type: tm+mt
 source-wordcount: '452'
-ht-degree: 66%
+ht-degree: 100%
 
 ---
 
@@ -14,31 +14,31 @@ ht-degree: 66%
 
 Cette section décrit la procédure qui doit être suivie afin de mettre à jour AEM pour les installations de serveur d’applications.
 
-Tous les exemples de cette procédure utilisent Tomcat comme serveur d’applications et impliquent que vous disposez d’une version fonctionnelle d’AEM déjà déployée. La procédure est destinée à documenter les mises à niveau d’**AEM version 6.4 vers la version 6.5**.
+Tous les exemples de cette procédure utilisent Tomcat comme serveur d’applications et présument que vous disposez d’une version de travail d’AEM déjà déployée. La procédure est destinée à documenter les mises à niveau d’**AEM version 6.4 vers la version 6.5**.
 
-1. D&#39;abord, démarrez TomCat. Dans la plupart des cas, vous pouvez effectuer cette opération en exécutant l’événement `./catalina.sh` démarrez le script de démarrage en exécutant cette commande à partir du terminal :
+1. D’abord, démarrez TomCat. Dans la plupart des cas, vous pouvez le faire en exécutant le script de démarrage `./catalina.sh`, en exécutant cette commande à partir du terminal :
 
    ```shell
    $CATALINA_HOME/bin/catalina.sh start
    ```
 
-1. Si AEM 6.4 est déjà déployé, vérifiez que les lots fonctionnent correctement en accédant à :
+1. Si AEM 6.4 est déjà déployé, vérifiez que les lots fonctionnent correctement en accédant à :
 
    ```shell
    https://<serveraddress:port>/cq/system/console/bundles
    ```
 
-1. Ensuite, annulez le déploiement d’AEM 6.4. Pour ce faire, utilisez le gestionnaire d’applications TomCat (`http://serveraddress:serverport/manager/html`)
+1. Ensuite, annulez le déploiement d’AEM 6.4. Pour ce faire, utilisez le gestionnaire d’applications TomCat (`http://serveraddress:serverport/manager/html`).
 
-1. Maintenant, migrez le référentiel à l’aide de l’outil de migration crx2oak. Pour ce faire, téléchargez la dernière version de crx2oak à partir de [cet emplacement](https://repo1.maven.org/maven2/com/adobe/granite/crx2oak/).
+1. À présent, migrez le référentiel à l’aide de l’outil de migration crx2oak. Pour ce faire, téléchargez la dernière version de crx2oak à partir de [cet emplacement](https://repo1.maven.org/maven2/com/adobe/granite/crx2oak/).
 
    ```shell
-   SLING_HOME= $AEM-HOME/crx-quickstart java -Xmx4096m -XX:MaxPermSize=2048M -jar crx2oak.jar --load-profile segment-fds
+   SLING_HOME= $AEM-HOME/crx-quickstart java -Xmx4096m -jar crx2oak.jar --load-profile segment-fds
    ```
 
 1. Supprimez les propriétés requises du fichier sling.properties en procédant comme suit :
 
-   1. Ouvrez le fichier situé à l’adresse `crx-quickstart/launchpad/sling.properties`
+   1. Ouvrez le fichier situé à l’emplacement `crx-quickstart/launchpad/sling.properties`.
    1. Supprimez les propriétés suivantes et enregistrez le fichier :
 
       1. `sling.installer.dir`
@@ -61,13 +61,13 @@ Tous les exemples de cette procédure utilisent Tomcat comme serveur d’applica
 
    * Le **dossier launchpad/startup**. Vous pouvez le supprimer en exécutant la commande suivante dans le terminal :`rm -rf crx-quickstart/launchpad/startup`
 
-   * Le **fichier base.jar**: `find crx-quickstart/launchpad -type f -name "org.apache.sling.launchpad.base.jar*" -exec rm -f {} \`
+   * Le fichier **base.jar** : `find crx-quickstart/launchpad -type f -name "org.apache.sling.launchpad.base.jar*" -exec rm -f {} \`
 
-   * Le **Fichier BootstrapCommandFile_timestamp.txt**: `rm -f crx-quickstart/launchpad/felix/bundle0/BootstrapCommandFile_timestamp.txt`
+   * Le fichier **BootstrapCommandFile_timestamp.txt** : `rm -f crx-quickstart/launchpad/felix/bundle0/BootstrapCommandFile_timestamp.txt`
 
-   * Supprimer **sling.options.file** en exécutant : `find crx-quickstart/launchpad -type f -name "sling.options.file" -exec rm -rf`
+   * Supprimez **sling.options.file** en exécutant : `find crx-quickstart/launchpad -type f -name "sling.options.file" -exec rm -rf`
 
-1. Créez à présent les entrepôts de nœuds et de données qui seront utilisés avec AEM 6.5. Pour ce faire, vous devez créer deux fichiers portant les noms suivants sous `crx-quickstart\install` :
+1. Créez à présent les magasins de nœuds et de données qui seront utilisés avec AEM 6.5. Pour ce faire, vous devez créer deux fichiers portant les noms suivants sous `crx-quickstart\install` :
 
    * `org.apache.jackrabbit.oak.segment.SegmentNodeStoreService.cfg`
    * `org.apache.jackrabbit.oak.plugins.blob.datastore.FileDataStore.cfg`
@@ -76,11 +76,11 @@ Tous les exemples de cette procédure utilisent Tomcat comme serveur d’applica
 
 1. Modifiez les fichiers de configuration pour les rendre prêts à l’emploi. Plus précisément :
 
-   * Ajoutez la ligne suivante à `org.apache.jackrabbit.oak.segment.SegmentNodeStoreService.config`:
+   * Ajoutez la ligne suivante à `org.apache.jackrabbit.oak.segment.SegmentNodeStoreService.config` :
 
       `customBlobStore=true`
 
-   * Puis, ajoutez les lignes suivantes à `org.apache.jackrabbit.oak.plugins.blob.datastore.FileDataStore.config`:
+   * Puis, ajoutez les lignes suivantes à `org.apache.jackrabbit.oak.plugins.blob.datastore.FileDataStore.config` :
 
       ```
       path=./crx-quickstart/repository/datastore
@@ -93,13 +93,13 @@ Tous les exemples de cette procédure utilisent Tomcat comme serveur d’applica
    jar xvf aem-quickstart-6.5.0.war
    ```
 
-1. Une fois le contenu extrait, accédez au dossier **WEB-INF** et modifiez le fichier web.xml afin de modifier les modes d’exécution. Pour trouver l’emplacement où ils sont définis dans le fichier XML, recherchez la chaîne `sling.run.modes`. Une fois que vous l’avez trouvée, définissez les modes d’exécution sur la ligne de code suivante qui, par défaut, est définie sur author :
+1. Une fois le contenu extrait, accédez au dossier **WEB-INF** et modifiez le fichier Web.xml afin de modifier les modes d’exécution. Pour trouver l’emplacement où ils sont définis dans le fichier XML, recherchez la chaîne `sling.run.modes`. Une fois que vous l’avez trouvée, définissez les modes d’exécution sur la ligne de code suivante qui, par défaut, est définie sur author :
 
    ```bash
    <param-value >author</param-value>
    ```
 
-1. Modifiez la valeur d’auteur ci-dessus et définissez les modes d’exécution sur : `author,crx3,crx3tar`. Le bloc de code final doit se présenter comme suit :
+1. Modifiez la valeur author ci-dessus et définissez les modes d’exécution sur : `author,crx3,crx3tar`. Le bloc de code final devrait ressembler à ceci :
 
    ```
    <init-param>
